--- a/templates/ajax/admin/users/all_index.html.twig
+++ b/templates/ajax/admin/users/all_index.html.twig
@@ -21,7 +21,7 @@
             {% embed "ajax/admin/users/listing_tabs.html.twig" %}{% endembed %}
             <h5>{{'Alle User'|trans({}, "admin")}}</h5>
 
-            <div class="row-flex">
+            <div class="row-flex wrap">
                 <div class="padded cell">
                     <span class="small">{{ 'Ergebnisse'|trans({},'global') }}: <b>{{ total }}</b></span>
                 </div>
@@ -32,7 +32,7 @@
                         {% endfor %}
                     </select></label>
                 </div>
-                <div class="padded cell">
+                <div class="padded cell rw-md-12">
                     <div tabindex="0" class="small button button-dropdown-button">
                         <i class="fa fa-filter"></i>
                         <div class="button-dropdown" style="width: 400px;">
@@ -110,18 +110,18 @@
             {% if pages > 0 %}
                 <div class="row-table">
                 <div class="row header">
-                    <div class="cell padded rw-1">{{ 'ID'|trans({},'admin') }}</div>
-                    <div class="cell padded rw-3">{{ 'Benutzername'|trans({},'admin') }}</div>
-                    <div class="cell padded rw-2">{{ 'Rolle'|trans({},'admin') }}</div>
-                    <div class="cell-small padded rw-1 center">&nbsp;</div>
-                    <div class="cell-small padded rw-1 center"><img alt="" src="{{ asset('build/images/assets/img/icons/home.gif') }}"></div>
-                    <div class="cell-small padded rw-1 center"><img alt="" height="16" width="16" src="{{ asset('build/images/badges/eternal.png') }}"></div>
+                    <div class="cell padded rw-1 rw-sm-2">{{ 'ID'|trans({},'admin') }}</div>
+                    <div class="cell padded rw-3 rw-sm-6">{{ 'Benutzername'|trans({},'admin') }}</div>
+                    <div class="cell padded rw-2 rw-sm-0">{{ 'Rolle'|trans({},'admin') }}</div>
+                    <div class="cell-small padded rw-1 rw-sm-2 center">&nbsp;</div>
+                    <div class="cell-small padded rw-1 rw-sm-2 center"><img alt="" src="{{ asset('build/images/assets/img/icons/home.gif') }}"></div>
+                    <div class="cell-small padded rw-1 rw-sm-2 center"><img alt="" height="16" width="16" src="{{ asset('build/images/badges/eternal.png') }}"></div>
                 </div>
                 {% for user in users %}
                     {# @var user \App\Entity\User #}
                     <div class="row">
-                        <div class="cell padded rw-1">{{ user.id }}</div>
-                        <div class="cell padded rw-3">
+                        <div class="cell padded rw-1 rw-sm-2">{{ user.id }}</div>
+                        <div class="cell padded rw-3 rw-sm-6">
                             <a target="_blank" href="{{ path('admin_users_account_view', {id: user.id}) }}"><b>{{ user.username }}</b></a>
                             {% if user.username != user.name %}
                                 <br/><span class="small">{{ user.name }}</span>
@@ -130,7 +130,7 @@
                                 <br /><span class="small">{{ user.email }}</span>
                             {% endif %}
                         </div>
-                        <div class="cell padded rw-2">
+                        <div class="cell padded rw-2 rw-sm-0">
                             <div>
                                 {% if     user.rightsElevation == 0 %} {{ 'Spieler'|trans({}, 'admin') }}
                                 {% elseif user.rightsElevation == 3 %} {{ 'Krähe'|trans({}, 'admin') }}
@@ -144,21 +144,21 @@
                                 {% if user|is_granted('ROLE_ANIMAC') %}<div>{{ 'Animateur'|trans({}, 'admin') }}</div>{% endif %}
                             </div>
                         </div>
-                        <div class="cell-small padded rw-1 center">
+                        <div class="cell-small padded rw-1 rw-sm-2 center">
                             {% if user.language is not null %}
                                 <img height="16" alt="" src="{{ asset('build/images/lang/' ~ user.language ~ '.png') }}"/>
                             {% else %}
                                 &nbsp;
                             {% endif %}
                         </div>
-                        <div class="cell-small padded rw-1 center">
+                        <div class="cell-small padded rw-1 rw-sm-2 center">
                             {% if user.activeCitizen %}
                                 <a target="_blank" title="{{ user.activeCitizen.town.name }}" href="{{ path('admin_town_explorer', {id: user.activeCitizen.town.id}) }}"><img alt="[X]" src="{{ asset('build/images/icons/tickOn.gif') }}"/></a>
                             {% else %}
                                 <img alt="[ ]" src="{{ asset('build/images/icons/tickOff.gif') }}"/>
                             {% endif %}
                         </div>
-                        <div class="cell-small padded rw-1 center">
+                        <div class="cell-small padded rw-1 rw-sm-2 center">
                             {% if user.eternalID is not null %}
                                 <img alt="[X]" src="{{ asset('build/images/icons/tickOn.gif') }}"/>
                             {% else %}
