--- a/templates/ajax/admin/users/multi_index.html.twig
+++ b/templates/ajax/admin/users/multi_index.html.twig
@@ -7,24 +7,24 @@
             <h5>{{'Multi-Account Report'|trans({}, "admin")}}</h5>
             <div class="row-table">
                 <div class="row header">
-                    <div class="cell padded rw-4 center">{{ 'Benutzername'|trans({},'admin') }}</div>
-                    <div class="cell padded rw-2">{{ 'Verdacht'|trans({},'admin') }}</div>
-                    <div class="cell padded rw-6">{{ 'Andere Accounts'|trans({},'admin') }}</div>
+                    <div class="cell padded rw-4 rw-md-0 center">{{ 'Benutzername'|trans({},'admin') }}</div>
+                    <div class="cell padded rw-2 rw-md-12">{{ 'Verdacht'|trans({},'admin') }}</div>
+                    <div class="cell padded rw-6 rw-md-0">{{ 'Andere Accounts'|trans({},'admin') }}</div>
                 </div>
                 {% for table in ma_report %}
                     {% if not table.principal|restricted(constant('App\\Entity\\AccountRestriction::RestrictionGameplay')) %}
                     {# @var table \App\Structures\CheatTable #}
                         <div class="row">
-                            <div class="cell rw-4 padded">
+                            <div class="cell rw-4 rw-md-9 padded">
                                 <b>{{ table.principal.name }}</b>
                                 {% if is_granted('ROLE_ADMIN') %}
                                     <br /><span>{{ table.principal.email }}</span>
                                 {% endif %}
                             </div>
-                            <div class="cell rw-2 padded">
+                            <div class="cell rw-2 rw-md-3 padded">
                                 {{ table.likeliness }}
                             </div>
-                            <div class="cell {% if is_granted('ROLE_ADMIN') %}rw-5{% else %}rw-6{% endif %}">
+                            <div class="cell rw-md-12 {% if is_granted('ROLE_ADMIN') %}rw-5{% else %}rw-6{% endif %}">
                                 {% set group = [] %}
                                 {% for multi in table.users %}
                                     {% set group = group|merge([multi.id]) %}
@@ -43,9 +43,9 @@
                                 {% endfor %}
                             </div>
                             {% if is_granted('ROLE_ADMIN') %}
-                                <div class="cell rw-1 padded">
-                                    <button x-shadow x-api-endpoint="{{ url('admin_users_account_manage', {action: 'shadow',    id: table.principal.id}) }}"><div class="tooltip">{{ 'Bann'|trans({},'admin') }}</div><i class="fa fa-hammer hide-desktop"></i> <span class="hide-mobile">{{ 'Bann'|trans({},'admin') }}</span></button>
-                                    <button x-whitelist="{{ group|join('|') }}" x-api-endpoint="{{ url('admin_users_account_manage', {action: 'whitelist', id: table.principal.id}) }}"><div class="tooltip">{{ 'Whitelist'|trans({},'admin') }}</div><i class="fa fa-clipboard-check hide-desktop"></i> <span class="hide-mobile">{{ 'Whitelist'|trans({},'admin') }}</span></button>
+                                <div class="cell rw-1 rw-md-12 padded">
+                                    <button x-shadow x-api-endpoint="{{ url('admin_users_account_manage', {action: 'shadow',    id: table.principal.id}) }}"><div class="tooltip">{{ 'Bann'|trans({},'admin') }}</div><i class="fa fa-hammer hide-desktop"></i> <span class="hide-lg">{{ 'Bann'|trans({},'admin') }}</span></button>
+                                    <button x-whitelist="{{ group|join('|') }}" x-api-endpoint="{{ url('admin_users_account_manage', {action: 'whitelist', id: table.principal.id}) }}"><div class="tooltip">{{ 'Whitelist'|trans({},'admin') }}</div><i class="fa fa-clipboard-check hide-desktop"></i> <span class="hide-lg">{{ 'Whitelist'|trans({},'admin') }}</span></button>
                                 </div>
                             {% endif %}
                         </div>
