Change icon order in the citizen list

--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -945,3 +945,8 @@ ul.list{
     color: #f0d79e;
   }
 }
+
+.citizen-label-name-me{
+  border-top: 1px solid #6C7188 !important; 
+  background-color: #4e5162 !important;
+}
